--- a/qiyexiaohao/.project
+++ b/qiyexiaohao/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>企业小号</name>
+	<name>qiyexiaohao</name>
 	<comment>Create By HBuilder</comment>
 	<projects>
 	</projects>
@@ -22,7 +22,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1523411137587</id>
+			<id>1523498415361</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
