--- a/qiyexiaohao/manifest.json
+++ b/qiyexiaohao/manifest.json
@@ -127,91 +127,114 @@
 		}
 	},
 	"dependencies":{
-		"pages": {
-			"my.html": {
-				"href": "my.html",
-				"resources": [
-					"css/mui.min.css",
-					"fonts/mui.ttf",
-					"js/mui.min.js"
-				],
-				"priority": 0
-			},
-			"sendMsg.html": {
-				"href": "sendMsg.html",
-				"resources": [
-					"js/mui.min.js",
-					"js/vue.min.js",
-					"js/vue-html5plus.js",
-					"js/vue-tap.js",
-					"js/mint-ui.min.js",
-					"css/mui.min.css",
-					"fonts/mui.ttf"
-				],
-				"priority": 1
-			},
-			"addContact.html": {
-				"href": "addContact.html",
-				"resources": [
-					"js/mui.min.js",
-					"js/vue.min.js",
-					"js/vue-html5plus.js",
-					"js/mint-ui.min.js",
-					"js/common.js",
-					"css/mui.min.css",
-					"fonts/mui.ttf"
-				],
-				"priority": 2
-			},
-			"contact_mint.html": {
-				"href": "contact_mint.html",
-				"resources": [
-					"js/mui.min.js",
-					"js/vue.min.js",
-					"js/vue-html5plus.js",
-					"js/vue-tap.js",
-					"js/mint-ui.min.js",
-					"js/ChinesePY.js",
-					"js/common.js",
-					"css/mui.min.css",
-					"fonts/mui.ttf",
-					"css/mint-ui-style.css"
-				],
-				"refer": [
-					"addContact.html"
-				],
-				"priority": 2
-			},
-			"main.html": {
-				"href": "main.html",
-				"resources": [
-					"js/mui.min.js"
-				],
-				"priority": 3
-			},
-			"index.html": {
-				"href": "index.html",
-				"resources": [
-					"css/mui.min.css",
-					"fonts/mui.ttf",
-					"js/mui.min.js"
-				],
-				"refer": [
-					"my.html",
-					"sendMsg.html",
-					"contact_mint.html",
-					"main.html"
-				],
-				"priority": 0
-			}
-		},
-		"idle": {
-			"resources": [
-				"js/mui.js",
-				"css/mui.indexedlist.css",
-				"css/mui.css",
-				"js/mui.indexedlist.js"
-			]
-		}
+	  "pages": {
+	    "my.html": {
+	      "href": "my.html",
+	      "resources": [
+	        "css/mui.min.css",
+	        "fonts/mui.ttf",
+	        "js/mui.min.js"
+	      ],
+	      "priority": 0,
+	      "refer": []
+	    },
+	    "sendMsg.html": {
+	      "href": "sendMsg.html",
+	      "resources": [
+	        "js/mui.min.js",
+	        "js/vue.min.js",
+	        "js/vue-html5plus.js",
+	        "js/vue-tap.js",
+	        "js/mint-ui.min.js",
+	        "css/mui.min.css",
+	        "fonts/mui.ttf",
+	        "js/common.js"
+	      ],
+	      "priority": 1,
+	      "refer": []
+	    },
+	    "addContact.html": {
+	      "href": "addContact.html",
+	      "resources": [
+	        "js/mui.min.js",
+	        "js/vue.min.js",
+	        "js/vue-html5plus.js",
+	        "js/mint-ui.min.js",
+	        "js/common.js",
+	        "css/mui.min.css",
+	        "fonts/mui.ttf"
+	      ],
+	      "priority": 2,
+	      "refer": []
+	    },
+	    "contact_mint.html": {
+	      "href": "contact_mint.html",
+	      "resources": [
+	        "js/mui.min.js",
+	        "js/vue.min.js",
+	        "js/vue-html5plus.js",
+	        "js/vue-tap.js",
+	        "js/mint-ui.min.js",
+	        "js/ChinesePY.js",
+	        "js/common.js",
+	        "css/mui.min.css",
+	        "fonts/mui.ttf",
+	        "css/mint-ui-style.css"
+	      ],
+	      "refer": [
+	        "addContact.html"
+	      ],
+	      "priority": 2
+	    },
+	    "main.html": {
+	      "href": "main.html",
+	      "resources": [
+	        "js/mui.min.js",
+	        "js/vue.min.js",
+	        "js/mint-ui.min.js",
+	        "js/vue-html5plus.js",
+	        "js/common.js",
+	        "css/mui.min.css",
+	        "fonts/mui.ttf",
+	        "css/mint-ui-style.css"
+	      ],
+	      "priority": 3,
+	      "refer": []
+	    },
+	    "index.html": {
+	      "href": "index.html",
+	      "resources": [
+	        "css/mui.min.css",
+	        "fonts/mui.ttf",
+	        "js/mui.min.js"
+	      ],
+	      "refer": [
+	        "my.html",
+	        "sendMsg.html",
+	        "contact_mint.html",
+	        "main.html",
+	        "msg.html"
+	      ],
+	      "priority": 0
+	    },
+	    "msg.html": {
+	      "href": "msg.html",
+	      "resources": [
+	        "js/mui.min.js",
+	        "js/vue.min.js",
+	        "js/mint-ui.min.js",
+	        "js/vue-html5plus.js",
+	        "js/common.js",
+	        "css/mui.min.css",
+	        "fonts/mui.ttf",
+	        "css/mint-ui-style.css"
+	      ],
+	      "refer": [
+	        "sendMsg.html"
+	      ],
+	      "priority": 0
+	    }
+	  },
+	  "idle": {}
 	}
 }
