--- a/qiyexiaohao/manifest.json
+++ b/qiyexiaohao/manifest.json
@@ -23,21 +23,13 @@
         "Console": {
             "description": "跟踪调试输出日志"
         },
-        "Contacts": {
-            "description": "访问系统联系人信息"
-        },
+        "Contacts": {},
         "Events": {
             "description": "应用扩展事件"
         },
-        "Messaging": {
-            "description": "访问通讯能力"
-        },
-        "Maps": {
-            "description": "管理地图插件"
-        },
-        "Speech": {
-            "description": "管理语音识别插件"
-        }
+        "Messaging": {},
+        
+        "Zip":{},"File":{},"Device":{},"Gallery":{},"Webview":{},"Runtime":{},"Storage":{},"Barcode":{},"NativeUI":{},"Navigator":{},"NativeObj":{},"Invocation":{}
 	},
 	"plus": {
 		"splashscreen": {
@@ -60,7 +52,7 @@
 				"keystore": "",/*Android应用打包使用的密钥库文件*/
 				"password": "",/*Android应用打包使用密钥库中证书的密码*/
 				"aliasname": "",/*Android应用打包使用密钥库中证书的别名*/
-				"permissions": ["<uses-permission android:name=\"android.permission.CHANGE_NETWORK_STATE\"/>","<uses-permission android:name=\"android.permission.MOUNT_UNMOUNT_FILESYSTEMS\"/>","<uses-permission android:name=\"android.permission.READ_CONTACTS\"/>","<uses-permission android:name=\"android.permission.VIBRATE\"/>","<uses-permission android:name=\"android.permission.READ_LOGS\"/>","<uses-permission android:name=\"android.permission.ACCESS_WIFI_STATE\"/>","<uses-feature android:name=\"android.hardware.camera.autofocus\"/>","<uses-permission android:name=\"android.permission.WRITE_CONTACTS\"/>","<uses-permission android:name=\"android.permission.ACCESS_NETWORK_STATE\"/>","<uses-permission android:name=\"com.android.launcher.permission.UNINSTALL_SHORTCUT\"/>","<uses-permission android:name=\"android.permission.CAMERA\"/>","<uses-permission android:name=\"android.permission.GET_ACCOUNTS\"/>","<uses-permission android:name=\"android.permission.RECORD_AUDIO\"/>","<uses-permission android:name=\"android.permission.MODIFY_AUDIO_SETTINGS\"/>","<uses-permission android:name=\"com.android.launcher.permission.INSTALL_SHORTCUT\"/>","<uses-permission android:name=\"android.permission.READ_PHONE_STATE\"/>","<uses-permission android:name=\"android.permission.CHANGE_WIFI_STATE\"/>","<uses-permission android:name=\"android.permission.WAKE_LOCK\"/>","<uses-permission android:name=\"android.permission.FLASHLIGHT\"/>","<uses-permission android:name=\"android.permission.CALL_PHONE\"/>","<uses-permission android:name=\"android.permission.ACCESS_COARSE_LOCATION\"/>","<uses-feature android:name=\"android.hardware.camera\"/>","<uses-permission android:name=\"android.permission.ACCESS_FINE_LOCATION\"/>","<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"]
+				"permissions": ["<uses-permission android:name=\"android.permission.READ_CONTACTS\"/>","<uses-permission android:name=\"android.permission.VIBRATE\"/>","<uses-permission android:name=\"android.permission.ACCESS_WIFI_STATE\"/>","<uses-feature android:name=\"android.hardware.camera.autofocus\"/>","<uses-permission android:name=\"android.permission.WRITE_CONTACTS\"/>","<uses-permission android:name=\"android.permission.ACCESS_NETWORK_STATE\"/>","<uses-permission android:name=\"com.android.launcher.permission.UNINSTALL_SHORTCUT\"/>","<uses-permission android:name=\"android.permission.CAMERA\"/>","<uses-permission android:name=\"android.permission.GET_ACCOUNTS\"/>","<uses-permission android:name=\"com.android.launcher.permission.INSTALL_SHORTCUT\"/>","<uses-permission android:name=\"android.permission.SEND_SMS\"/>","<uses-permission android:name=\"android.permission.READ_PHONE_STATE\"/>","<uses-permission android:name=\"android.permission.WAKE_LOCK\"/>","<uses-permission android:name=\"android.permission.CALL_PHONE\"/>","<uses-permission android:name=\"android.permission.FLASHLIGHT\"/>","<uses-feature android:name=\"android.hardware.camera\"/>","<uses-permission android:name=\"android.permission.WRITE_EXTERNAL_STORAGE\"/>","<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>","<uses-permission android:name=\"android.permission.WRITE_SMS\"/>","<uses-permission android:name=\"android.permission.READ_SMS\"/>"]
 			},
 			"orientation": ["portrait-primary"],/*应用支持的方向，portrait-primary：竖屏正方向；portrait-secondary：竖屏反方向；landscape-primary：横屏正方向；landscape-secondary：横屏反方向*/
 			"icons": {
@@ -127,114 +119,122 @@
 		}
 	},
 	"dependencies":{
-	  "pages": {
-	    "my.html": {
-	      "href": "my.html",
-	      "resources": [
-	        "css/mui.min.css",
-	        "fonts/mui.ttf",
-	        "js/mui.min.js"
-	      ],
-	      "priority": 0,
-	      "refer": []
-	    },
-	    "sendMsg.html": {
-	      "href": "sendMsg.html",
-	      "resources": [
-	        "js/mui.min.js",
-	        "js/vue.min.js",
-	        "js/vue-html5plus.js",
-	        "js/vue-tap.js",
-	        "js/mint-ui.min.js",
-	        "css/mui.min.css",
-	        "fonts/mui.ttf",
-	        "js/common.js"
-	      ],
-	      "priority": 1,
-	      "refer": []
-	    },
-	    "addContact.html": {
-	      "href": "addContact.html",
-	      "resources": [
-	        "js/mui.min.js",
-	        "js/vue.min.js",
-	        "js/vue-html5plus.js",
-	        "js/mint-ui.min.js",
-	        "js/common.js",
-	        "css/mui.min.css",
-	        "fonts/mui.ttf"
-	      ],
-	      "priority": 2,
-	      "refer": []
-	    },
-	    "contact_mint.html": {
-	      "href": "contact_mint.html",
-	      "resources": [
-	        "js/mui.min.js",
-	        "js/vue.min.js",
-	        "js/vue-html5plus.js",
-	        "js/vue-tap.js",
-	        "js/mint-ui.min.js",
-	        "js/ChinesePY.js",
-	        "js/common.js",
-	        "css/mui.min.css",
-	        "fonts/mui.ttf",
-	        "css/mint-ui-style.css"
-	      ],
-	      "refer": [
-	        "addContact.html"
-	      ],
-	      "priority": 2
-	    },
-	    "main.html": {
-	      "href": "main.html",
-	      "resources": [
-	        "js/mui.min.js",
-	        "js/vue.min.js",
-	        "js/mint-ui.min.js",
-	        "js/vue-html5plus.js",
-	        "js/common.js",
-	        "css/mui.min.css",
-	        "fonts/mui.ttf",
-	        "css/mint-ui-style.css"
-	      ],
-	      "priority": 3,
-	      "refer": []
-	    },
-	    "index.html": {
-	      "href": "index.html",
-	      "resources": [
-	        "css/mui.min.css",
-	        "fonts/mui.ttf",
-	        "js/mui.min.js"
-	      ],
-	      "refer": [
-	        "my.html",
-	        "sendMsg.html",
-	        "contact_mint.html",
-	        "main.html",
-	        "msg.html"
-	      ],
-	      "priority": 0
-	    },
-	    "msg.html": {
-	      "href": "msg.html",
-	      "resources": [
-	        "js/mui.min.js",
-	        "js/vue.min.js",
-	        "js/mint-ui.min.js",
-	        "js/vue-html5plus.js",
-	        "js/common.js",
-	        "css/mui.min.css",
-	        "fonts/mui.ttf",
-	        "css/mint-ui-style.css"
-	      ],
-	      "refer": [
-	        "sendMsg.html"
-	      ],
-	      "priority": 0
-	    }
-	  },
-	  "idle": {}
+		"pages": {
+			"my.html": {
+				"href": "my.html",
+				"resources": [
+					"css/mui.min.css",
+					"fonts/mui.ttf",
+					"js/mui.min.js"
+				],
+				"priority": 0,
+				"refer": []
+			},
+			"sendMsg.html": {
+				"href": "sendMsg.html",
+				"resources": [
+					"js/mui.min.js",
+					"js/vue.min.js",
+					"js/vue-html5plus.js",
+					"js/vue-tap.js",
+					"js/mint-ui.min.js",
+					"css/mui.min.css",
+					"fonts/mui.ttf",
+					"js/common.js"
+				],
+				"priority": 1,
+				"refer": []
+			},
+			"addContact.html": {
+				"href": "addContact.html",
+				"resources": [
+					"js/mui.min.js",
+					"js/vue.min.js",
+					"js/vue-html5plus.js",
+					"js/mint-ui.min.js",
+					"js/common.js",
+					"css/mui.min.css",
+					"fonts/mui.ttf"
+				],
+				"priority": 2,
+				"refer": []
+			},
+			"contact_mint.html": {
+				"href": "contact_mint.html",
+				"resources": [
+					"js/mui.min.js",
+					"js/vue.min.js",
+					"js/vue-html5plus.js",
+					"js/vue-tap.js",
+					"js/mint-ui.min.js",
+					"js/ChinesePY.js",
+					"js/common.js",
+					"css/mui.min.css",
+					"fonts/mui.ttf",
+					"css/mint-ui-style.css"
+				],
+				"refer": [
+					"addContact.html"
+				],
+				"priority": 2
+			},
+			"main.html": {
+				"href": "main.html",
+				"resources": [
+					"js/mui.min.js",
+					"js/vue.min.js",
+					"js/mint-ui.min.js",
+					"js/vue-html5plus.js",
+					"js/common.js",
+					"css/mui.min.css",
+					"fonts/mui.ttf",
+					"css/mint-ui-style.css"
+				],
+				"priority": 3,
+				"refer": [
+					"contactDetail.html"
+				]
+			},
+			"index.html": {
+				"href": "index.html",
+				"resources": [
+					"css/mui.min.css",
+					"fonts/mui.ttf",
+					"js/mui.min.js",
+					"main.html"
+				],
+				"refer": [
+					"my.html",
+					"sendMsg.html",
+					"contact_mint.html",
+					"msg.html",
+					"msg1.html",
+					"contactDetail.html"
+				],
+				"priority": 0
+			},
+			"msg.html": {
+				"href": "msg.html",
+				"resources": [
+					"js/mui.min.js",
+					"js/vue.min.js",
+					"js/mint-ui.min.js",
+					"js/vue-html5plus.js",
+					"js/common.js",
+					"css/mui.min.css",
+					"fonts/mui.ttf",
+					"css/mint-ui-style.css"
+				],
+				"refer": [
+					"sendMsg.html"
+				],
+				"priority": 0
+			}
+		},
+		"idle": {
+			"resources": [
+				"css/common.css"
+			]
+		}
 	}
 }
