--- a/qiyexiaohao/manifest.json
+++ b/qiyexiaohao/manifest.json
@@ -229,6 +229,13 @@
 					"sendMsg.html"
 				],
 				"priority": 0
+			},
+			"msg1.html": {
+				"resources": [],
+				"refer": [
+					"sendMsg.html"
+				],
+				"priority": 0
 			}
 		},
 		"idle": {
