--- a/qiyexiaohao/manifest.json
+++ b/qiyexiaohao/manifest.json
@@ -166,9 +166,9 @@
 				"android": {
 					"mdpi": "", /*普通屏启动图片，分辨率：240x282*/
 					"ldpi": "", /*大屏启动图片，分辨率：320x442*/
-					"hdpi": "C:/Users/haixia/Desktop/480.png", /*高分屏启动图片，分辨率：480x762*/
-					"xhdpi": "C:/Users/haixia/Desktop/720.png", /*720P高分屏启动图片，分辨率：720x1242*/
-					"xxhdpi": "C:/Users/haixia/Desktop/1080.png"
+					"hdpi": "F:/qiyexiaohao/480.png", /*高分屏启动图片，分辨率：480x762*/
+					"xhdpi": "F:/qiyexiaohao/720.png", /*720P高分屏启动图片，分辨率：720x1242*/
+					"xxhdpi": "F:/qiyexiaohao/1080.png"
 				}
 			}
 		}
