初步对接接口
初步对接接口

--- a/qiyexiaohao/manifest.json
+++ b/qiyexiaohao/manifest.json
@@ -359,7 +359,8 @@
 			"login.html": {
 				"resources": [],
 				"refer": [
-					"index.html"
+					"index.html",
+					"loginOfC.html"
 				],
 				"priority": 0
 			}
