--- a/qiyexiaohao/manifest.json
+++ b/qiyexiaohao/manifest.json
@@ -193,7 +193,11 @@
 					"center/setting.html",
 					"center/kefu.html",
 					"center/addAcount.html",
-					"login.html"
+					"login.html",
+					"center/feedback.html",
+					"center/about.html",
+					"center/settingAccout.html",
+					"center/myOtherNumber.html"
 				]
 			},
 			"sendMsg.html": {
@@ -361,6 +365,14 @@
 				"refer": [
 					"index.html",
 					"loginOfC.html"
+				],
+				"priority": 0
+			},
+			"center/myOtherNumber.html": {
+				"resources": [],
+				"refer": [
+					"login.html",
+					"center/kefu.html"
 				],
 				"priority": 0
 			}
