选择企业登
选择企业登

--- a/qiyexiaohao/manifest.json
+++ b/qiyexiaohao/manifest.json
@@ -376,6 +376,13 @@
 					"center/kefu.html"
 				],
 				"priority": 0
+			},
+			"loginOfC.html": {
+				"resources": [],
+				"refer": [
+					"index.html"
+				],
+				"priority": 0
 			}
 		},
 		"idle": {
