--- a/qiyexiaohao/manifest.json
+++ b/qiyexiaohao/manifest.json
@@ -7,7 +7,7 @@
 	"id": "H52338B4E",/*应用的标识，创建应用时自动生成，勿手动修改*/
 	"name": "企业小号",/*应用名称，程序桌面图标名称*/
 	"version": {
-		"name": "1.0.0",/*应用版本名称*/
+		"name": "1.0.1",/*应用版本名称*/
 		"code": "1"
 	},
 	"description": "",/*应用描述信息*/
@@ -171,7 +171,7 @@
 					"xxhdpi": "F:/qiyexiaohao/1080.png"
 				}
 			}
-		},"ads":{"rp":false,"splash":false,"push":false},"adid":""
+		},"ads":{"rp":false,"splash":false,"push":false}
 	},
 	"dependencies": {
 		"pages": {
