--- a/qiyexiaohao/manifest.json
+++ b/qiyexiaohao/manifest.json
@@ -14,7 +14,7 @@
 	"icons": {
 		"72": "icon.png"
 	},
-	"launch_path": "index.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
+	"launch_path": "login.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
 	"developer": {
 		"name": "lc",/*开发者名称*/
 		"email": "",/*开发者邮箱地址*/
@@ -362,7 +362,8 @@
 					"fonts/iconfont.ttf"
 				],
 				"refer": [
-					"sendMsg.html"
+					"sendMsg.html",
+					"addContact.html"
 				],
 				"priority": 0
 			},
